// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should match the snapshot 1`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  
  Text
</button>
`;

exports[`Button component when center prop is set 1`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 bsXPpa"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  
  Center
</button>
`;

exports[`Button component when full prop is set 1`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 ffPCVF"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  
  Full
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 1`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  
  primary
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 2`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 hlsPJA"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  
  secondary
</button>
`;

exports[`Button component when there is a skin set should match secondary snapshot 3`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 eZtRng"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  
  action
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 1`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  
  button
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 2`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="reset"
>
  
  reset
</button>
`;

exports[`Button component when there is a type set should match secondary snapshot 3`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="submit"
>
  
  submit
</button>
`;

exports[`Button component with an icon should match secondary snapshot 1`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Button__ButtonIcon-sc-1ovnfsw-0 lcmNHP"
    size="medium"
    style={
      Object {
        "color": "",
      }
    }
  >
    search
  </span>
  Search
</button>
`;

exports[`Button component with an icon should match secondary snapshot 2`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Button__ButtonIcon-sc-1ovnfsw-0 lcmNHP"
    size="medium"
    style={
      Object {
        "color": "",
      }
    }
  >
    sync
  </span>
  Sync
</button>
`;

exports[`Button component with an icon should match secondary snapshot 3`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Button__ButtonIcon-sc-1ovnfsw-0 lcmNHP"
    size="medium"
    style={
      Object {
        "color": "",
      }
    }
  >
    sms
  </span>
  Message
</button>
`;

exports[`Button component with an icon should match secondary snapshot 4`] = `
<button
  className="Button__StyledButton-sc-1ovnfsw-1 kUUAMn"
  disabled={false}
  onClick={[Function]}
  size="medium"
  type="button"
>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 Button__ButtonIcon-sc-1ovnfsw-0 lcmNHP"
    size="medium"
    style={
      Object {
        "color": "",
      }
    }
  >
    camera
  </span>
  Screenshot
</button>
`;
